[package]
name = "onair-server-container"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features = false }
pretty_env_logger = "0.4.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.12"
warp = {version="0.3.0", features = ["tls"]}
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
